--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -6,8 +6,15 @@
   </head>
   <body>
     <h1>Dashboard</h1>
-    <div id="data"></div>
-
+    <table border="1">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Status</th>
+        </tr>
+      </thead>
+      <tbody id="data"></tbody>
+    </table>
     <script src="js/dashboard.js"></script>
     <!-- We'll create this next -->
   </body>
