fetch Notion records

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -11,6 +11,7 @@
         <tr>
           <th>Name</th>
           <th>Status</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody id="data"></tbody>
