start "create" endpoint

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -6,6 +6,14 @@
   </head>
   <body>
     <h1>Dashboard</h1>
+    <h3>Add New Record</h3>
+    <input type="text" id="new-name" placeholder="Name" />;
+    <select id="new-status">
+      <option value="Not Active">Not Active</option>
+      <option value="In progress">In progress</option>
+      <option value="Active">Active</option>
+    </select>
+    <button id="add-record">Add Record</button>
     <table border="1">
       <thead>
         <tr>
