--- a/public/adminDashboard.html
+++ b/public/adminDashboard.html
@@ -16,7 +16,7 @@
           <th>Action</th>
         </tr>
       </thead>
-      <tbody id="pending-users"></tbody>
+      <tbody id="users"></tbody>
     </table>
 
     <script src="js/adminDashboard.js"></script>
