--- a/public/userDashboard.html
+++ b/public/userDashboard.html
@@ -24,7 +24,7 @@
       </thead>
       <tbody id="data"></tbody>
     </table>
-    <script src="js/dashboard.js"></script>
+    <script src="js/userDashboard.js"></script>
     <!-- We'll create this next -->
   </body>
 </html>
